--- a/scss/components/_backdrop.scss
+++ b/scss/components/_backdrop.scss
@@ -23,6 +23,31 @@
     background-color: $white;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: $borderRadius;
+    &__textarea {
+            display: block;
+            width: 100%;
+            height: 120px;
+            resize: none;
+            padding: 12px 16px;
+            font-size: 12px;
+            line-height: 14px;
+            letter-spacing: 0.01em;
+            color: $main-color;
+            cursor: pointer;
+            margin-top: 4px;
+            border: 1px solid rgba(33, 33, 33, 0.2);
+            border-radius: $borderRadius;
+            transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+            &:focus {
+                border: 1px solid $darkBlu;
+                border-radius: $borderRadius;
+            }
+    }
+    
+    &__textarea::placeholder {
+            color: rgba(117, 117, 117, 0.5);
+    }
 }
 
 .close {
@@ -86,7 +111,7 @@
     line-height: 14px;
     letter-spacing: 0.01em;
     color: $gray;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .modal-input-wrapper {
@@ -201,27 +226,3 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }}
 
-.modal__textarea {
-    display: block;
-    width: 100%;
-    height: 120px;
-    resize: none;
-    padding: 12px 16px;
-    font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 0.01em;
-    color: $main-color;
-    cursor: pointer;
-    margin-top: 4px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: $borderRadius;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:focus {
-            border: 1px solid $darkBlu;
-            border-radius: $borderRadius;
-        }
-}
-
-.modal__textarea::placeholder {
-    color: rgba(117, 117, 117, 0.5);
-}
