--- a/scss/components/_comand.scss
+++ b/scss/components/_comand.scss
@@ -1,24 +1,72 @@
 .comand {
-    background-color: $grayBlu;
-}
-
-.comand-gallery__item {
-    width: 270px;
-    background: $white;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-    font-size: 16px;
-    line-height: 19px;
-    display: block;
+    background-color: $benefitsBG;
 }
 
 .comand-gallery {
     justify-content: space-between;
     display: flex;
+    &__item {
+            width: 270px;
+            background: $white;
+            box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+            border-radius: 0px 0px 4px 4px;
+            font-size: 16px;
+            line-height: 19px;
+            display: block;
+        }
 }
 
 .comand-box {
     padding: 30px;
+    &__direction{
+            font-size: 16px;
+            line-height: 19px;
+            text-align: center;
+            letter-spacing: 0.03em;
+            color: $gray;
+        }
+    &__name {
+        color: $main-color;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 19px;
+        text-align: center;
+        letter-spacing: 0.03em;
+        margin-bottom: 10px;
+    }
+    &__social {
+        display: flex;
+        justify-content: center;
+        margin-top: 16px;
+    
+    }
+    &__item {
+        margin-right: 10px;
+    }
+    &__link {
+        height: 44px;
+        width: 44px;
+        display: flex;
+        align-content: center;
+        justify-content: space-around;
+        align-items: center;
+        border-radius: 44px;
+        background: rgba(255, 255, 255, 0.1);
+        margin: 0px;
+        padding: 0px;
+        fill: $grayBlu;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &:hover,
+        &:focus {
+            background-color: $blu;
+            fill: $white;
+        }
+    }
+    &__icon {
+        height: 20px;
+        width: 20px;
+    }
 }
 
 .comand-name {
@@ -27,60 +75,4 @@
     line-height: 42px;
     margin: 0px;
     padding-bottom: 50px;
-}
-
-.comand-box__direction {
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: $gray;
-}
-
-.comand-box__name {
-    color: $main-color;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 10px;
-}
-
-.comand-box__social {
-    display: flex;
-    justify-content: center;
-    margin-top: 16px;
-
-}
-
-.comand-box__item {
-    margin-right: 10px;
-}
-
-.comand-box__link {
-    height: 44px;
-    width: 44px;
-    display: flex;
-    align-content: center;
-    justify-content: space-around;
-    align-items: center;
-    border-radius: 44px;
-    background: rgba(255, 255, 255, 0.1);
-    margin: 0px;
-    padding: 0px;
-    fill: $grayBlu;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-        background-color: $blu;
-        fill: $white;
-    }
-}
-
-
-
-.comand-box__icon {
-    height: 20px;
-    width: 20px;
 }
