--- a/scss/components/_bisnes.scss
+++ b/scss/components/_bisnes.scss
@@ -1,5 +1,5 @@
 .bisnes {
-    color: var(--white);
+    color: $white;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/fon.jpg");
     background-size: cover;
     background-position: center;
