--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,20 +1,21 @@
-@import './utils/variables';
 @import './utils/base';
 @import './utils/colors';
+@import './utils/variables';
 
-@import './components/header';
-@import './components/footer';
-@import './components/button-main';
-@import './components/benefits';
-@import './components/comand';
-@import './components/work';
-@import './components/clients';
-@import './components/button-porfolio';
-@import './components/project-porfolio';
+
 @import './components/backdrop';
-@import './components/logo';
-@import './components/sections';
+@import './components/benefits';
+@import './components/bisnes';
+@import './components/button-porfolio';
+@import './components/clients';
+@import './components/comand';
 @import './components/container';
+@import './components/footer';
+@import './components/header';
 @import './components/join';
+@import './components/logo';
+@import './components/project-porfolio';
+@import './components/sections';
 @import './components/subscription';
+@import './components/work';
 
